@@ -3,6 +3,8 @@ New in 0.9.13:
 * IDE support for retrieving structured information about metavariables
 * Experimental Bits support for JavaScript
 * IdrisDoc: a Haddock- and JavaDoc-like HTML documentation generator
+* Command line option -e (or --eval) to evaluate expressions without loading the
+  REPL. This is useful for writing more portable tests.
 
 Internal changes
 
